<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="20dp">

    <ImageView
        android:id="@+id/imgProfile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="#FFF000"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/textNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nome: "
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/textNameLabel"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="10dp"
            android:text="Guilherme"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/textScoreLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_below="@+id/textNameLabel"
            android:text="Pontos: "
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_toRightOf="@+id/textScoreLabel"
            android:layout_below="@+id/textName"
            android:layout_marginLeft="10dp"
            android:text="100"
            android:textSize="14sp"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="Filtro"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                >
                <ImageButton
                    android:id="@+id/btArtes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/artes"
                    android:layout_marginRight="10dp"/>

                <ImageButton
                    android:id="@+id/btBiologia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/biologia"
                    android:layout_marginRight="10dp"/>

                <ImageButton
                    android:id="@+id/btEdFisica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edfisica"
                    android:layout_marginRight="10dp"/>

                <ImageButton
                    android:id="@+id/btFilosofia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/filosofia"
                    android:layout_marginRight="10dp"/>

                <ImageButton
                    android:id="@+id/btFisica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/fisica"
                    android:layout_marginRight="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textSize="11dp"
                    android:text="@string/matArtes"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    android:layout_marginRight="10dp"
                    android:textSize="11sp"
                    android:text="@string/matBiologia"/>
                <TextView
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="0dp"
                    android:textSize="11sp"
                    android:text="@string/matEdFisica"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="10dp"
                    android:textSize="11sp"
                    android:text="@string/matFilosofia"/>
                <TextView
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="0dp"
                    android:textSize="11sp"
                    android:text="@string/matFisica"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                >
                <ImageButton
                    android:id="@+id/btGeografia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/geografia"
                    android:layout_marginRight="10dp"/>

                <ImageButton
                    android:id="@+id/btEdHistoria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/historia"
                    android:layout_marginRight="10dp"/>

                <ImageButton
                    android:id="@+id/btIngles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ingles"
                    android:layout_marginRight="10dp"/>

                <ImageButton
                    android:id="@+id/btMatematica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/matematica"
                    android:layout_marginRight="10dp"/>

                <ImageButton
                    android:id="@+id/btMulti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/multi"
                    android:layout_marginRight="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="10dp"
                    android:textSize="11sp"
                    android:text="@string/matGeografia"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="10dp"
                    android:textSize="11sp"
                    android:text="@string/matHistoria"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="10dp"
                    android:textSize="11sp"
                    android:text="@string/matIngles"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textSize="10sp"
                    android:text="@string/matMatematica"/>
                <TextView
                    android:layout_width="68dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="0dp"
                    android:textSize="10sp"
                    android:text="@string/matMulti"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                >
                <ImageButton
                    android:id="@+id/btPortugues"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/portugues"
                    android:layout_marginRight="10dp"/>

                <ImageButton
                    android:id="@+id/btQuimica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/quimica"
                    android:layout_marginRight="10dp"/>

                <ImageButton
                    android:id="@+id/btSociologia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/sociologia"
                    android:layout_marginRight="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="10dp"
                    android:textSize="11sp"
                    android:text="@string/matPortugues"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-6dp"
                    android:layout_marginRight="10dp"
                    android:textSize="11sp"
                    android:text="@string/matQuimica"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="0dp"
                    android:textSize="11sp"
                    android:text="@string/matSociologia"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>